[package]
name = "dumbleodor"
version = "0.1.0"
authors = ["n4sm <hobbyste.sda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.0"
xmas-elf = "0.7.0"
libc = "0.2.80"
rand = "0.7.3"
lde = "0.3.0"
iced-x86 = "1.10.0"